Added margin to content elements

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -54,7 +54,7 @@
     color: #ddd;
     text-decoration: none;
   }
-  
+
 }
 
 /* Menu item header */
@@ -86,4 +86,8 @@
 
 .red {
   color: rgb(231, 91, 91);
+}
+
+.content {
+  margin-left: 300px;
 }
