Made font awesome fixed width

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -2,7 +2,7 @@
 @import '../../bower_components/toastr/toastr';
 @import (less) '../../bower_components/magnific-popup/dist/magnific-popup.css';
 
-@font-family-base: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+@font-family-base: 'Avenir', 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 /* Position and sizing of burger button */
 .bm-burger-button {
