Added charts and select boxes

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -17,6 +17,7 @@ html, body {
 }
 
 .content {
+  padding: 50px;
   margin-left: 300px;
   min-height: 100%;
   position: absolute;
@@ -24,6 +25,14 @@ html, body {
   bottom: 0;
   left: 0;
   right: 0;
+}
+
+h1 {
+  font-weight: 900;
+}
+
+hr {
+  border-top: 1px solid #333;
 }
 
 /*****************************
@@ -183,11 +192,11 @@ html, body {
   margin-top: 25%;
 }
 
-.home > h1 {
-  font-weight: 900;
-}
-
 .home > p {
   margin-top: 10%;
   font-weight: 100;
 }
+
+/*****************************
+*********** STATUS ***********
+******************************/
