Added test section reading in dropdown options

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -198,5 +198,9 @@ hr {
 }
 
 /*****************************
-*********** STATUS ***********
+*********** TESTS ************
 ******************************/
+
+.test-section {
+  margin-left: 10px;
+}
