Moved select box to non-ignored directory

--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
 	<title>HealthfrontX</title>
 	<link rel="stylesheet" href="/fonts/font-awesome-4.6.3/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="/css/main.css"/>
-	<link rel="stylesheet" href="/css/select-box.css"/>
+	<link rel="stylesheet" href="/external-css/select-box.css"/>
 </head>
 <body>
 <div id="app">{{ html|safe }}</div>
