Removed error bars temporarily

--- a/views/index.html
+++ b/views/index.html
@@ -14,5 +14,6 @@
 <script src="/js/vendor.js"></script>
 <script src="/js/vendor.bundle.js"></script>
 <script src="/js/bundle.js"></script>
+<script src="http://code.highcharts.com/highcharts-more.js"></script>
 </body>
 </html>
